# Isis

./: .gitignore  CMakeLists.txt  LoadEnvironment.sh  README  configure  configure.sh  makefile
Analysis/: CMakeLists.txt
Analysis/AdaptiveBinning/: Bin1D.h  CMakeLists.txt
Analysis/Base/: CMakeLists.txt
Analysis/Clustering/: CMakeLists.txt
Analysis/RooFitExt/: CMakeLists.txt
Analysis/Statistics/: CMakeLists.txt
Analysis/Weights/: CMakeLists.txt
Analysis/include/: AdaptiveBinning.h  BDTAnalysis.h  CLsAnalysis.h  CutComparer.h  FileManager.h  ToyMCgenerator.h  TreeCategory.h  TreeExpression.h  TreeManagement.h
Analysis/source/: AdaptiveBinning.cpp  BDTAnalysis.cpp  CLsAnalysis.cpp  CutComparer.cpp  FileManager.cpp  MirandaAnalysis.cpp  ToyMCgenerator.cpp  TreeCategory.cpp  TreeExpression.cpp  TreeManagement.cpp
Examples/: AdapBin.cpp  AlgebraCalc.py  CLsScan.cpp  FisherDisc.py  MakeBDT.cpp  Makefile_MakeBDT  ParseStr.cpp  ProgBar.cpp  ToyMC.cpp  makefile
Examples/files/: ToyMCin.root
General/: CMakeLists.txt
General/include/: BufferArray.h  BufferVariable.h  ConfigParser.h  CutManager.h  Functions.h  Functors.h  Functors.h~  GlobalMessenger.h  HelicityAngles.h  KinematicVariables.h  LoopArray.h  LorentzVector.h  OutputTable.h  PhysFunctions.h  ProgressBar.h  SmartName.h  StringParser.h  Utils.h  Vector.h  Vector3.h
General/source/: BufferArray.cpp  BufferVariable.cpp  ConfigParser.cpp  CutManager.cpp  Functions.cpp  Functors.cpp  GlobalMessenger.cpp  HelicityAngles.cpp  KinematicVariables.cpp  LoopArray.cpp  LorentzVector.cpp  OutputTable.cpp  PhysFunctions.cpp  ProgressBar.cpp  SmartName.cpp  StringParser.cpp  Utils.cpp  Vector.cpp  Vector3.cpp
General/src/: Bounds.h  BoundsTools.h  BufferArray.cpp  BufferArray.h  BufferVariable.cpp  BufferVariable.h  ConfigParser.cpp  ConfigParser.h  CutManager.cpp  CutManager.h  Definitions.h  GlobalMessenger.cpp  GlobalMessenger.h  HelicityAngles.cpp  HelicityAngles.h  LoopArray.cpp  LoopArray.h  LorentzVector.cpp  LorentzVector.h  Messenger.cpp  Messenger.h  MessengerConfig.cpp  MessengerConfig.h  OutputTable.cpp  OutputTable.h  PhysFunctions.cpp  PhysFunctions.h  ProgressBar.cpp  ProgressBar.h  SmartName.cpp  SmartName.h  StringParser.h  Utils.cpp  Utils.h  ValueTypeDef.h  Vector.cpp  Vector.h
Makefiles/: OwnMakefile  SrcIncLibMakefile  SrcIncMakefile
Tools/: BDTBrowser.C  ChangeWords.py  ConvertVars.cpp  GetLuminosity.cpp  MergeFilesByEvents.cpp  ReorderTreeByEvents.cpp  SeeDifferences.py  changeWords.py  convertVars.cpp  getLuminosity.cpp  mergeFilesByEvents.cpp  reorderTreeByEvents.cpp
analysis/: CMakeLists.txt
analysis/AdaptiveBinning/: CMakeLists.txt
analysis/AdaptiveBinning/src/: AdaptiveBinning.h  AdaptiveBinning.hpp  AdaptiveBinning1D.cpp  AdaptiveBinning1D.h  AdaptiveBinning1D.hpp  AdaptiveBinning2D.cpp  AdaptiveBinning2D.h  AdaptiveBinning2D.hpp  Bin.cpp  Bin.h  Bin1D.cpp  Bin1D.h  Bin1D.hpp  Bin2D.cpp  Bin2D.hpp
analysis/Base/: CMakeLists.txt
analysis/Base/src/: RootUtils.cpp  TreeBuffer.cpp  TreeBuffer.hpp  TreeManagement.cpp  TreeManagement.h  TreeManagement.hpp
analysis/Clustering/: CMakeLists.txt
analysis/Clustering/src/: Cluster.cpp  Cluster.h  Cluster.hpp  ClusterCenterOfMass.cpp  ClusterCenterOfMass.hpp  ClusterFactory.cpp  ClusterFactory.hpp  ClusterPoint.cpp  ClusterPoint.hpp
analysis/Statistics/src/: CLsFactory.cpp  CLsFactory.hpp  CLsFluctuator.hpp  CLsHypothesis.cpp  CLsHypothesis.hpp  CLsPrior.h  CLsResult.cpp
analysis/Weights/: CMakeLists.txt
analysis/Weights/src/: VarBin.cpp  VarBin.hpp  VarWeighter.cpp  VarWeighter.hpp
cmake/: IsisConfig.cmake.in  IsisConfigVersion.cmake.in
examples/: AdapBin.cpp  AlgebraCalc.py  ClusterPlot.py  Clustering.cpp  FisherDisc.py  ProgBar.cpp  ToyMC.cpp  makefile
general/src/: Bounds.h  BoundsTools.h  (+45 more)
python/: CMakeLists.txt  compile.py
python/BoostPy/: CMakeLists.txt
python/BoostPy/RootTree/: CMakeLists.txt
python/BoostPy/RootTree/source/: TreeWrapper.cpp  Wrappers_RootTree.cpp
python/IBoost/: CMakeLists.txt
python/IBoost/PyAnalysis/: CMakeLists.txt
python/IBoost/PyAnalysis/src/: PyAdaptiveBinning.h  PyAnalysisBase.h  PyStatistics.h  Wrappers_PyAnalysis.cpp
python/IBoost/PyGeneral/: CMakeLists.txt
python/IBoost/PyGeneral/src/: Wrappers_PyGeneral.cpp
python/IBoost/RootTree/: CMakeLists.txt
python/IBoost/RootTree/src/: BuffVarWriter.cpp  BuffVarWriter.h  CppToPyTypes.cpp  CppToPyTypes.h  TreeWrapper.cpp  TreeWrapper.h  Wrappers_RootTree.cpp
python/IBoost/src/: GlobalWrappers.cpp  GlobalWrappers.h
python/IBoostPy/: CMakeLists.txt
python/IBoostPy/PyGeneral/: CMakeLists.txt
python/IBoostPy/PyGeneral/source/: Wrappers_PyGeneral.cpp
python/IBoostPy/RootTree/include/: GlobalWrappers.h  TreeWrapper.h
python/IBoostPy/RootTree/source/: CppToPyTypes.cpp  GlobalWrappers.cpp  Wrappers_RootTree.cpp
python/Isis/: Algebra.py  CLsClass.py  CutManager.py  DataManagement.py  DataManager.py  Decorators.py  DirectoryManagement.py  Efficiencies.py  GRIDjob.py  MathExt.py  PlotTools.py  RooFitTools.py  RootUtils.py  Statistics.py  Trigger.py  Utils.py  __init__.py  data_management.py  decorators.py  efficiencies.py  expressions.py  iroot.py  math_ext.py  plot_tools.py  root_utils.py  statistics.py  utils.py
python/cmake/: FindNumPy.cmake
python/iboost/: CMakeLists.txt
python/iboost/analysis/: CMakeLists.txt
python/iboost/analysis/src/: PyAdaptiveBinning.h  PyAdaptiveBinning.hpp  PyAnalysisBase.h  PyAnalysisBase.hpp  PyStatistics.h  PyStatistics.hpp  Wrappers_Analysis.cpp
python/iboost/general/: CMakeLists.txt
python/iboost/general/src/: Wrappers_General.cpp
python/iboost/rootio/: CMakeLists.txt
python/iboost/rootio/src/: BuffVarWriter.cpp  BuffVarWriter.h  BuffVarWriter.hpp  NumpyConverters.h  TreeWrapper.cpp  TreeWrapper.h  TreeWrapper.hpp  Wrappers_RootIO.cpp
python/iboost/src/: GlobalWrappers.cpp  GlobalWrappers.h  GlobalWrappers.hpp  InitModule.h  InitModule.hpp  NumpyUtils.h  NumpyUtils.hpp
scripts/: CLsMuScanPlotUtils.py  clsMuScan.py  compareSamples.py  readCuts.py
tools/: readCuts.cpp
(+116 files in other folders)
